# AutoTracker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PLANNED_FEATURES.md  README.md  config.profile_vertical_demo.xml  config.xml  nixpacks.toml  pdr.md  pyproject.toml  railway.toml  requirements.txt
input models/: demo road2.dxf  grade_corner_3pct_5pct_no_fillet.dxf  grade_fillet_3pct_5pct_R10.dxf  profile_demo_vertical.dxf  rectangle_20x60.dxf  site_layout.dxf
pysweptpath/: __init__.py  analysis.py  clearance.py  cli.py  config.py  dxf_io.py  envelope.py  kinematics.py  path_follow.py  plot_output.py  report.py  turn_templates.py  vehicle.py  vehicle_json.py  vertical_geometry.py  vertical_plot.py  vertical_sim.py
pysweptpath/editor/: __init__.py  app.py  canvas_draw.py
scripts/: create_demo_dxf.py  create_rectangle_dxf.py
tests/: __init__.py  test_analysis_smoke.py  test_turn_templates.py
vehicles/: 350T_crane.xml  ap_g34_a_double_36_2m.xml  ap_g34_a_triple_53_4m.xml  ap_g34_articulated_bus_19m.xml  ap_g34_b_double_26m.xml  ap_g34_b_triple_35_4m.xml  ap_g34_long_rigid_bus_14_5m.xml  ap_g34_passenger_5_2m.xml  ap_g34_passenger_car_trailer_17_6m.xml  ap_g34_prime_mover_long_semi_25m.xml  ap_g34_prime_mover_semi_19m.xml  ap_g34_service_vehicle_8_8m.xml  ap_g34_single_unit_truck_12_5m.xml  example_multi_steer.xml  fire_appliance.xml  semi_wb50.xml  test.xml  tiny_home_12m_trailer.xml
webapp/: __init__.py  main.py
webapp/static/: app.js  editor.js  index.html  styles.css  turns.js
